feat(projects): show project poster on detail
